--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "splat-ecs-starter-project",
+  "name": "GGJ17",
   "version": "0.0.0",
   "description": "A Sample game",
   "private": true,
@@ -12,13 +12,8 @@
     "start": "webpack-dev-server --hot --inline --content-base build/html --host 0.0.0.0 --port 4000",
     "watch": "webpack --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SplatJS/splat-ecs-starter-project.git"
-  },
   "keywords": [],
   "author": "Eric Lathrop <eric@ericlathrop.com> (http://ericlathrop.com/)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/SplatJS/splat-ecs-starter-project/issues"
   },
