--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "simple-peer": "^6.2.1",
-    "splat-ecs": "^7.5.1"
+    "splat-ecs": "^7.5.1",
+    "three": "^0.84.0"
   }
 }
