Setup webpack dev middleware

--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,10 @@
   "dependencies": {
     "express": "^4.14.0",
     "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.17.0"
   }
 }
