--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "mersenne-twister": "^1.1.0",
     "simple-peer": "^6.2.1",
     "splat-ecs": "^7.6.0",
-    "three": "^0.84.0"
+    "three": "^0.84.0",
+    "uuid": "^3.0.1"
   }
 }
